# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

# Workspace for the Slint integration tests and test drivers.
#
# Separate from the repository root so editing the library crates does not
# pull the test harnesses (which use the `slint!` proc-macro) into
# rust-analyzer / cargo. Shares the repository `target/` directory (see
# `.cargo/config.toml`) and uses the same `[profile]` settings as the root
# workspace so common library artifacts are reused.
[workspace]
members = [
  'doctests',
  'driver/cpp',
  'driver/driverlib',
  'driver/interpreter',
  'driver/nodejs',
  'driver/python',
  'driver/rust',
  'screenshots',
  'backends',
  'manual/windowattributes',
  'manual/module-builds/blogica',
  'manual/module-builds/blogicb',
  'manual/module-builds/app',
  'issues/test-11836-project/test-app',
  'issues/test-11836-project/test-library',
]

resolver = "3"

[workspace.package]
description = "GUI toolkit to efficiently develop fluid graphical user interfaces for embedded devices and desktop applications"
authors = ["Slint Developers <info@slint.dev>"]
documentation = "https://slint.dev/docs"
edition = "2024"
homepage = "https://slint.dev"
keywords = ["gui", "toolkit", "graphics", "design", "ui"]
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0"
repository = "https://github.com/slint-ui/slint"
rust-version = "1.92"
version = "1.18.0"

[workspace.dependencies]
# These are path dependencies on workspace members. The `version` pin is required
# by `cargo xtask check_license_headers` (REUSE compliance), which enforces that
# every slint/i-slint path dependency specifies `version = "=<workspace version>"`.
slint = { version = "=1.18.0", path = "../api/rs/slint", default-features = false }
slint-cpp = { version = "=1.18.0", path = "../api/cpp", default-features = false }
slint-interpreter = { version = "=1.18.0", path = "../internal/interpreter", default-features = false }
i-slint-backend-qt = { version = "=1.18.0", path = "../internal/backends/qt", default-features = false }
i-slint-backend-testing = { version = "=1.18.0", path = "../internal/backends/testing", default-features = false }
i-slint-backend-winit = { version = "=1.18.0", path = "../internal/backends/winit", default-features = false }
i-slint-compiler = { version = "=1.18.0", path = "../internal/compiler", default-features = false }
i-slint-core = { version = "=1.18.0", path = "../internal/core", default-features = false }
# Keep the default `softbuffer` backend enabled: in the monolithic workspace
# `--all-features` enabled a skia backend (skia was a member), but here skia is
# only a dependency, so without a backend `skia_windowed` is unset and the
# renderer fails to compile.
i-slint-renderer-skia = { version = "=1.18.0", path = "../internal/renderers/skia" }

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = { version = "0.14" }
spin_on = { version = "0.1" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# Always build resvg and its hot-path dependencies with optimizations,
# as it otherwise causes freezes to load large SVGs in debug builds.
[profile.dev.package.resvg]
opt-level = 3
[profile.dev.package.usvg]
opt-level = 3
[profile.dev.package.tiny-skia]
opt-level = 3
[profile.dev.package.rgb]
opt-level = 3
