# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial

[package]
name = "xtask"
version = "1.1.1"
authors = ["Slint Developers <info@slint.dev>"]
description = "Development helper tool for the Slint project"
edition = "2021"
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.1 OR LicenseRef-Slint-commercial"
publish = false

[dependencies]
const_format = "0.2"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
cargo_metadata = "0.15"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.4"
toml_edit = "0.19"
xshell = "0.2.1"
serde_json = "1.0"
cbindgen = "0.24"
proc-macro2 = "1.0.11"
which = "4.2.4"
i-slint-common = { version = "=1.1.1", path="../internal/common" }
