# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "xtask"
description = "Development helper tool for the Slint project"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
const_format = "0.2"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.4"
toml_edit = { workspace = true }
xshell = "0.2.1"
serde_json = "1.0"
cbindgen = { workspace = true }
proc-macro2 = "1.0.11"
which = "6.0"
i-slint-common = { workspace = true, features = ["default"] }
